// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`entitlements in PermDock mode > renders the bigint scope id type in every tenant signature 1`] = `
"-- better-supabase SQL kit: entitlements
-- Active Stripe entitlements per tenant from the Stripe Sync Engine, feature_claims() for the access token hook, and has_entitlement() for RLS.
-- Managed by \`better-supabase sql add\`; re-running it overwrites this file.

create schema if not exists better_supabase;
grant usage on schema better_supabase to anon, authenticated, service_role;
grant usage on schema better_supabase to supabase_auth_admin;

-- Lookup keys of the tenant's active entitlements, from the Stripe Sync
-- Engine's stripe.active_entitlements. Empty before the engine is installed.
create or replace function better_supabase.tenant_entitlements(tenant bigint)
returns text[]
language plpgsql
stable
security definer
set search_path = ''
as $$
declare
  customer_id text := better_supabase.tenant_stripe_customer(tenant);
begin
  if customer_id is null or to_regclass('stripe.active_entitlements') is null then
    return '{}';
  end if;
  return coalesce((
    select array_agg(distinct e.lookup_key order by e.lookup_key)
    from stripe.active_entitlements e
    where e.customer = customer_id
      and e.lookup_key is not null
  ), '{}');
end
$$;

revoke execute on function better_supabase.tenant_entitlements(bigint) from public, anon, authenticated;
grant execute on function better_supabase.tenant_entitlements(bigint) to service_role, supabase_auth_admin;

-- PermDock mode: memberships come from PermDock's organization scope
-- ("authz"."member_organization_ids"() and "authz"."member_organization_ids_for"(uuid), from \`permdock rls generate\`).

-- using ((select better_supabase.has_entitlement(organization_id, 'exports')))
create or replace function better_supabase.has_entitlement(tenant bigint, key text)
returns boolean
language sql
stable
security definer
set search_path = ''
as $$
  select tenant in (select "authz"."member_organization_ids"())
    and key = any (better_supabase.tenant_entitlements(tenant))
$$;

revoke execute on function better_supabase.has_entitlement(bigint, text) from public, anon;
grant execute on function better_supabase.has_entitlement(bigint, text) to authenticated, service_role;

-- The \`features\` claim: { [organization id]: lookup keys }, read by
-- hasEntitlement(). Register it with PermDock instead of writing a hook:
--   supabase: { hook: { claims: { features: 'better_supabase.feature_claims' } } }
-- \`permdock supabase hook generate --grants-out\` then grants "authz"."member_organization_ids_for"
-- to supabase_auth_admin.
create or replace function better_supabase.feature_claims(user_id uuid)
returns jsonb
language sql
stable
security definer
set search_path = ''
as $$
  select coalesce(jsonb_object_agg(t.id::text, to_jsonb(e.keys)), '{}'::jsonb)
  from "authz"."member_organization_ids_for"(feature_claims.user_id) as t(id)
  cross join lateral (select better_supabase.tenant_entitlements(t.id) as keys) e
  where cardinality(e.keys) > 0
$$;

revoke execute on function better_supabase.feature_claims(uuid) from public, anon, authenticated;
grant execute on function better_supabase.feature_claims(uuid) to service_role, supabase_auth_admin;

-- config.entitlements: organizations.stripe_customer_id
create or replace function better_supabase.tenant_stripe_customer(tenant bigint)
returns text
language sql
stable
security definer
set search_path = ''
as $$
  select t."stripe_customer_id" from "public"."organizations" t where t."id" = tenant
$$;

create or replace function better_supabase.stripe_customer_tenants(customer text)
returns setof bigint
language sql
stable
security definer
set search_path = ''
as $$
  select t."id" from "public"."organizations" t where t."stripe_customer_id" = customer
$$;

-- Users whose features claim carries the customer's entitlements, for
-- invalidating their sessions after entitlements.active_entitlement_summary.updated.
create or replace function better_supabase.entitlement_members(customer text)
returns setof uuid
language sql
stable
security definer
set search_path = ''
as $$
  select distinct m."user_id"::uuid
  from "public"."memberships" m
  where m."scope_id"::text in (select t::text from better_supabase.stripe_customer_tenants(customer) t)
    and m."scope"::text = 'organization'
$$;

revoke execute on function better_supabase.tenant_stripe_customer(bigint) from public, anon, authenticated;
revoke execute on function better_supabase.stripe_customer_tenants(text) from public, anon, authenticated;
revoke execute on function better_supabase.entitlement_members(text) from public, anon, authenticated;
grant execute on function better_supabase.entitlement_members(text) to service_role;
"
`;

exports[`entitlements in PermDock mode > renders the text scope id type in every tenant signature 1`] = `
"-- better-supabase SQL kit: entitlements
-- Active Stripe entitlements per tenant from the Stripe Sync Engine, feature_claims() for the access token hook, and has_entitlement() for RLS.
-- Managed by \`better-supabase sql add\`; re-running it overwrites this file.

create schema if not exists better_supabase;
grant usage on schema better_supabase to anon, authenticated, service_role;
grant usage on schema better_supabase to supabase_auth_admin;

-- Lookup keys of the tenant's active entitlements, from the Stripe Sync
-- Engine's stripe.active_entitlements. Empty before the engine is installed.
create or replace function better_supabase.tenant_entitlements(tenant text)
returns text[]
language plpgsql
stable
security definer
set search_path = ''
as $$
declare
  customer_id text := better_supabase.tenant_stripe_customer(tenant);
begin
  if customer_id is null or to_regclass('stripe.active_entitlements') is null then
    return '{}';
  end if;
  return coalesce((
    select array_agg(distinct e.lookup_key order by e.lookup_key)
    from stripe.active_entitlements e
    where e.customer = customer_id
      and e.lookup_key is not null
  ), '{}');
end
$$;

revoke execute on function better_supabase.tenant_entitlements(text) from public, anon, authenticated;
grant execute on function better_supabase.tenant_entitlements(text) to service_role, supabase_auth_admin;

-- PermDock mode: memberships come from PermDock's organization scope
-- ("authz"."member_organization_ids"() and "authz"."member_organization_ids_for"(uuid), from \`permdock rls generate\`).

-- using ((select better_supabase.has_entitlement(organization_id, 'exports')))
create or replace function better_supabase.has_entitlement(tenant text, key text)
returns boolean
language sql
stable
security definer
set search_path = ''
as $$
  select tenant in (select "authz"."member_organization_ids"())
    and key = any (better_supabase.tenant_entitlements(tenant))
$$;

revoke execute on function better_supabase.has_entitlement(text, text) from public, anon;
grant execute on function better_supabase.has_entitlement(text, text) to authenticated, service_role;

-- The \`features\` claim: { [organization id]: lookup keys }, read by
-- hasEntitlement(). Register it with PermDock instead of writing a hook:
--   supabase: { hook: { claims: { features: 'better_supabase.feature_claims' } } }
-- \`permdock supabase hook generate --grants-out\` then grants "authz"."member_organization_ids_for"
-- to supabase_auth_admin.
create or replace function better_supabase.feature_claims(user_id uuid)
returns jsonb
language sql
stable
security definer
set search_path = ''
as $$
  select coalesce(jsonb_object_agg(t.id::text, to_jsonb(e.keys)), '{}'::jsonb)
  from "authz"."member_organization_ids_for"(feature_claims.user_id) as t(id)
  cross join lateral (select better_supabase.tenant_entitlements(t.id) as keys) e
  where cardinality(e.keys) > 0
$$;

revoke execute on function better_supabase.feature_claims(uuid) from public, anon, authenticated;
grant execute on function better_supabase.feature_claims(uuid) to service_role, supabase_auth_admin;

-- config.entitlements: organizations.stripe_customer_id
create or replace function better_supabase.tenant_stripe_customer(tenant text)
returns text
language sql
stable
security definer
set search_path = ''
as $$
  select t."stripe_customer_id" from "public"."organizations" t where t."id" = tenant
$$;

create or replace function better_supabase.stripe_customer_tenants(customer text)
returns setof text
language sql
stable
security definer
set search_path = ''
as $$
  select t."id" from "public"."organizations" t where t."stripe_customer_id" = customer
$$;

-- Users whose features claim carries the customer's entitlements, for
-- invalidating their sessions after entitlements.active_entitlement_summary.updated.
create or replace function better_supabase.entitlement_members(customer text)
returns setof uuid
language sql
stable
security definer
set search_path = ''
as $$
  select distinct m."user_id"::uuid
  from "public"."memberships" m
  where m."scope_id"::text in (select t::text from better_supabase.stripe_customer_tenants(customer) t)
    and m."scope"::text = 'organization'
$$;

revoke execute on function better_supabase.tenant_stripe_customer(text) from public, anon, authenticated;
revoke execute on function better_supabase.stripe_customer_tenants(text) from public, anon, authenticated;
revoke execute on function better_supabase.entitlement_members(text) from public, anon, authenticated;
grant execute on function better_supabase.entitlement_members(text) to service_role;
"
`;

exports[`entitlements in PermDock mode > renders the uuid scope id type in every tenant signature 1`] = `
"-- better-supabase SQL kit: entitlements
-- Active Stripe entitlements per tenant from the Stripe Sync Engine, feature_claims() for the access token hook, and has_entitlement() for RLS.
-- Managed by \`better-supabase sql add\`; re-running it overwrites this file.

create schema if not exists better_supabase;
grant usage on schema better_supabase to anon, authenticated, service_role;
grant usage on schema better_supabase to supabase_auth_admin;

-- Lookup keys of the tenant's active entitlements, from the Stripe Sync
-- Engine's stripe.active_entitlements. Empty before the engine is installed.
create or replace function better_supabase.tenant_entitlements(tenant uuid)
returns text[]
language plpgsql
stable
security definer
set search_path = ''
as $$
declare
  customer_id text := better_supabase.tenant_stripe_customer(tenant);
begin
  if customer_id is null or to_regclass('stripe.active_entitlements') is null then
    return '{}';
  end if;
  return coalesce((
    select array_agg(distinct e.lookup_key order by e.lookup_key)
    from stripe.active_entitlements e
    where e.customer = customer_id
      and e.lookup_key is not null
  ), '{}');
end
$$;

revoke execute on function better_supabase.tenant_entitlements(uuid) from public, anon, authenticated;
grant execute on function better_supabase.tenant_entitlements(uuid) to service_role, supabase_auth_admin;

-- PermDock mode: memberships come from PermDock's organization scope
-- ("authz"."member_organization_ids"() and "authz"."member_organization_ids_for"(uuid), from \`permdock rls generate\`).

-- using ((select better_supabase.has_entitlement(organization_id, 'exports')))
create or replace function better_supabase.has_entitlement(tenant uuid, key text)
returns boolean
language sql
stable
security definer
set search_path = ''
as $$
  select tenant in (select "authz"."member_organization_ids"())
    and key = any (better_supabase.tenant_entitlements(tenant))
$$;

revoke execute on function better_supabase.has_entitlement(uuid, text) from public, anon;
grant execute on function better_supabase.has_entitlement(uuid, text) to authenticated, service_role;

-- The \`features\` claim: { [organization id]: lookup keys }, read by
-- hasEntitlement(). Register it with PermDock instead of writing a hook:
--   supabase: { hook: { claims: { features: 'better_supabase.feature_claims' } } }
-- \`permdock supabase hook generate --grants-out\` then grants "authz"."member_organization_ids_for"
-- to supabase_auth_admin.
create or replace function better_supabase.feature_claims(user_id uuid)
returns jsonb
language sql
stable
security definer
set search_path = ''
as $$
  select coalesce(jsonb_object_agg(t.id::text, to_jsonb(e.keys)), '{}'::jsonb)
  from "authz"."member_organization_ids_for"(feature_claims.user_id) as t(id)
  cross join lateral (select better_supabase.tenant_entitlements(t.id) as keys) e
  where cardinality(e.keys) > 0
$$;

revoke execute on function better_supabase.feature_claims(uuid) from public, anon, authenticated;
grant execute on function better_supabase.feature_claims(uuid) to service_role, supabase_auth_admin;

-- config.entitlements: organizations.stripe_customer_id
create or replace function better_supabase.tenant_stripe_customer(tenant uuid)
returns text
language sql
stable
security definer
set search_path = ''
as $$
  select t."stripe_customer_id" from "public"."organizations" t where t."id" = tenant
$$;

create or replace function better_supabase.stripe_customer_tenants(customer text)
returns setof uuid
language sql
stable
security definer
set search_path = ''
as $$
  select t."id" from "public"."organizations" t where t."stripe_customer_id" = customer
$$;

-- Users whose features claim carries the customer's entitlements, for
-- invalidating their sessions after entitlements.active_entitlement_summary.updated.
create or replace function better_supabase.entitlement_members(customer text)
returns setof uuid
language sql
stable
security definer
set search_path = ''
as $$
  select distinct m."user_id"::uuid
  from "public"."memberships" m
  where m."scope_id"::text in (select t::text from better_supabase.stripe_customer_tenants(customer) t)
    and m."scope"::text = 'organization'
$$;

revoke execute on function better_supabase.tenant_stripe_customer(uuid) from public, anon, authenticated;
revoke execute on function better_supabase.stripe_customer_tenants(text) from public, anon, authenticated;
revoke execute on function better_supabase.entitlement_members(text) from public, anon, authenticated;
grant execute on function better_supabase.entitlement_members(text) to service_role;
"
`;
